Resize overlapping buttons, fix panda, mantis, tiger images, added custom font

--- a/css/tiger.css
+++ b/css/tiger.css
@@ -32,7 +32,7 @@ body {
 a {
     text-decoration: none;
     color: #52006A;
-    background-color: #CD113B;
+    background-color: #FF7600;
     padding: 10px;
 }
 
